# qualixDEV

./: Makefile  README.md  pyproject.toml
jsonrpc_client/: asgi.py  settings.py  urls.py  wsgi.py
jsonrpc_client/api_client/: apps.py  forms.py  jsonrpc_client.py  tests.py  urls.py  views.py
jsonrpc_client/templates/api_client/: form.html
